# MS365-MIG-GCP

./: .env.example  .gitignore  DEPLOYMENT.md  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  celery_worker.py  main.py  pyproject.toml  requirements-ci.txt  requirements.txt  wsgi.py
backend/app/: __init__.py  constants.py  models.py
backend/app/api/: auth_router.py  devices.py  discovery.py  health.py  migration.py  router.py  tasks_api.py
backend/app/auth/: auth_manager.py  gw_auth_manager.py
backend/app/config/: settings.py
backend/app/core/: config.py
backend/app/discovery/: discovery_engine.py
backend/app/errors/: error_handler.py
backend/app/migrators/: base_migrator.py  chat_migrator.py  exchange_migrator.py  forms_migrator.py  groups_migrator.py  identity_migrator.py  intune_migrator.py  onedrive_migrator.py  planner_migrator.py  powerautomate_migrator.py  sharepoint_migrator.py  teams_migrator.py
backend/app/models/: models.py
backend/app/monitoring/: monitoring.py
backend/app/orchestrator/: gw_orchestrator.py  job_orchestrator.py
backend/app/services/: google_service.py  graph_service.py  tasks.py
backend/app/setup/: app_registrar.py  tenant_store.py
backend/app/state/: state_manager.py
backend/app/throttle/: throttle_manager.py
backend/app/verification/: verification_engine.py
backend/app/writers/: bigquery_writer.py  firestore_writer.py  gcs_writer.py  m365_writer.py  (+1 more)
backend/tests/: conftest.py  test_api.py  test_auth.py  test_exchange_migrator.py  test_onedrive_migrator.py  test_throttle.py
(+57 files in other folders)
